# neuros

./: Cargo.toml  README.MD  README.md
src/: activations.rs  lib.rs  neuralnet.rs  old_file.rs  trainer.rs  trainer_old.rs
