[package]
name = "neuros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand ="0.8.5"
ndarray = "0.15.0"
linfa ="0.7.0"
ndarray-csv = "0.5.2"
csv = "1.3.0"

#sefar = {git = "https://github.com/SaadDAHMANI/sefar"}
sefar = "0.1.3"