[package]
name = "neuros"
version = "0.1.1"
edition = "2021"
authors = ["Saad Dahmani <sd.dahmani2000@gmail.com>"] 
description ="Neuros is a Rust package for Artificial (Feedforward) Neural Networks (ANNs) processing."
keywords = ["neural-network", "machine-learning", "metaheuristic", "evolutionary", "science"] 
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand ="0.8.5"
ndarray = "0.15.0"
linfa ="0.7.0"
ndarray-csv = "0.5.2"
csv = "1.3.0"

#sefar = {git = "https://github.com/SaadDAHMANI/sefar"}
sefar = "0.1.3"